--- a/backend/generator/pom.xml
+++ b/backend/generator/pom.xml
@@ -55,11 +55,17 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-webflux</artifactId>
-</dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		<!-- <dependency>
+			<groupId>io.supabase</groupId>
+			<artifactId>storage-java</artifactId>
+			<version>1.1.0</version>
+		</dependency> -->
 	</dependencies>
-
+	<repositories>
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
